feat: Update analysis notebook for Phase 5, adjust GeoPackage path, and add new binary files for database management.

--- a/Notebooks/cologne_analysis_workflow.ipynb
+++ b/Notebooks/cologne_analysis_workflow.ipynb
@@ -1,187 +1,241 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# Phase 5: Python Analysis (Hybrid Approach)\n",
-                "\n",
-                "This notebook implements **Phase 5** of the Cologne Green Space Analysis workflow. \n",
-                "It uses `geopandas` and `pandas` to analyze the zonal statistics calculated in QGIS and stored in the GeoPackage database.\n",
-                "\n",
-                "**Prerequisites:**\n",
-                "- You must have completed **Phase 3** (Zonal Statistics) in QGIS.\n",
-                "- The file `cologne_analysis.gpkg` must exist in the project root and contain the layer `veedel_with_stats`."
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Step 5.1: Load Data from GeoPackage"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import geopandas as gpd\n",
-                "import pandas as pd\n",
-                "import os\n",
-                "\n",
-                "# Define path to GeoPackage\n",
-                "# Assuming this notebook is in 'Notebooks/' and the gpkg is in the root\n",
-                "gpkg_path = os.path.abspath(os.path.join(\"..\", \"cologne_analysis.gpkg\"))\n",
-                "\n",
-                "print(f\"Loading data from: {gpkg_path}\")\n",
-                "\n",
-                "try:\n",
-                "    # Read from your GeoPackage database\n",
-                "    gdf = gpd.read_file(\n",
-                "        gpkg_path,\n",
-                "        layer=\"veedel_with_stats\"\n",
-                "    )\n",
-                "\n",
-                "    print(\"✅ Data loaded from GeoPackage database!\")\n",
-                "    print(f\"Total Veedel: {len(gdf)}\")\n",
-                "    \n",
-                "    # Display first few rows\n",
-                "    display(gdf.head())\n",
-                "    \n",
-                "except Exception as e:\n",
-                "    print(f\"❌ Error loading data: {e}\")\n",
-                "    print(\"Make sure you have completed Phase 3 and saved the layer as 'veedel_with_stats'.\")"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Step 5.2: Basic Statistics"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "if 'gdf' in locals():\n",
-                "    print(\"\\n📊 NDVI Statistics:\")\n",
-                "    # Check if 'ndvi_mean' exists, if not try to find a similar column\n",
-                "    if 'ndvi_mean' not in gdf.columns:\n",
-                "        print(\"Column 'ndvi_mean' not found. Available columns:\", gdf.columns)\n",
-                "    else:\n",
-                "        print(gdf['ndvi_mean'].describe())"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Step 5.3: Identify Greenest and Neglected Areas"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "if 'gdf' in locals() and 'ndvi_mean' in gdf.columns:\n",
-                "    # Find greenest\n",
-                "    # Adjust 'NAME' to your actual name column if different (e.g., 'STADTVIERTEL')\n",
-                "    name_col = 'NAME' if 'NAME' in gdf.columns else gdf.columns[1] # Fallback to 2nd column\n",
-                "    \n",
-                "    top10 = gdf.nlargest(10, 'ndvi_mean')[[name_col, 'ndvi_mean']]\n",
-                "    print(\"\\n🌳 Top 10 Greenest Veedel:\")\n",
-                "    print(top10.to_string(index=False))\n",
-                "\n",
-                "    # Find neglected (NDVI < 0.25)\n",
-                "    neglected = gdf[gdf['ndvi_mean'] < 0.25][[name_col, 'ndvi_mean']]\n",
-                "    print(f\"\\n⚠️  Potentially Neglected Veedel (NDVI < 0.25): {len(neglected)}\")\n",
-                "    print(neglected.to_string(index=False))"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Step 5.4: Categorize and Save Results"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "if 'gdf' in locals() and 'ndvi_mean' in gdf.columns:\n",
-                "    # Calculate green space category\n",
-                "    def categorize_green(ndvi):\n",
-                "        if pd.isna(ndvi):\n",
-                "            return 'Unknown'\n",
-                "        if ndvi < 0.2:\n",
-                "            return 'Critical'\n",
-                "        elif ndvi < 0.3:\n",
-                "            return 'Low'\n",
-                "        elif ndvi < 0.4:\n",
-                "            return 'Moderate'\n",
-                "        else:\n",
-                "            return 'Good'\n",
-                "\n",
-                "    gdf['green_category'] = gdf['ndvi_mean'].apply(categorize_green)\n",
-                "    gdf['green_rank'] = gdf['ndvi_mean'].rank(ascending=False, method='min')\n",
-                "\n",
-                "    # Save back to GeoPackage as a NEW layer\n",
-                "    try:\n",
-                "        gdf.to_file(\n",
-                "            gpkg_path,\n",
-                "            layer=\"veedel_analysis_final\",\n",
-                "            driver=\"GPKG\"\n",
-                "        )\n",
-                "        print(\"\\n✅ Analysis saved to database as 'veedel_analysis_final' layer!\")\n",
-                "    except Exception as e:\n",
-                "        print(f\"\\n❌ Error saving to GeoPackage: {e}\")\n",
-                "\n",
-                "    # Also export rankings as CSV\n",
-                "    output_csv = os.path.abspath(os.path.join(\"..\", \"data\", \"outputs\", \"veedel_greenness_ranking.csv\"))\n",
-                "    \n",
-                "    # Ensure output directory exists\n",
-                "    os.makedirs(os.path.dirname(output_csv), exist_ok=True)\n",
-                "    \n",
-                "    rankings = gdf[[name_col, 'ndvi_mean', 'green_category', 'green_rank']].copy()\n",
-                "    rankings = rankings.sort_values('green_rank')\n",
-                "    rankings.to_csv(\n",
-                "        output_csv,\n",
-                "        index=False\n",
-                "    )\n",
-                "\n",
-                "    print(f\"✅ CSV exported to: {output_csv}\")"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.8.10"
-        }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "8nohXxELy1Va",
+   "metadata": {
+    "id": "8nohXxELy1Va"
+   },
+   "source": [
+    "# Phase 5: Python Analysis (Hybrid Approach)\n",
+    "\n",
+    "This notebook implements **Phase 5** of the Cologne Green Space Analysis workflow.\n",
+    "It uses `geopandas` and `pandas` to analyze the zonal statistics calculated in QGIS and stored in the GeoPackage database.\n",
+    "\n",
+    "**Prerequisites:**\n",
+    "- You must have completed **Phase 3** (Zonal Statistics) in QGIS.\n",
+    "- The file `cologne_analysis.gpkg` must exist in the project root and contain the layer `veedel_with_stats`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "XTwavAVHy1Vf",
+   "metadata": {
+    "id": "XTwavAVHy1Vf"
+   },
+   "source": [
+    "### Step 5.1: Load Data from GeoPackage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "J_wVsD08y1Vg",
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
     },
-    "nbformat": 4,
-    "nbformat_minor": 5
+    "executionInfo": {
+     "elapsed": 1339,
+     "status": "ok",
+     "timestamp": 1764053858630,
+     "user": {
+      "displayName": "Rahul Kumar",
+      "userId": "04382794669633999654"
+     },
+     "user_tz": -60
+    },
+    "id": "J_wVsD08y1Vg",
+    "outputId": "8d222a05-a4b5-420c-9678-b4a3992e8319"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from: /Users/rk/Sync/courses/correleraid/cologne_green_project/cologne_green_analysis.gpkg\n",
+      "❌ Error loading data: /Users/rk/Sync/courses/correleraid/cologne_green_project/cologne_green_analysis.gpkg: No such file or directory\n",
+      "Make sure you have completed Phase 3 and saved the layer as 'veedel_with_stats'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import geopandas as gpd\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Define path to GeoPackage\n",
+    "# Assuming this notebook is in 'Notebooks/' and the gpkg is in the root\n",
+    "gpkg_path = os.path.abspath(os.path.join(\"..\", \"cologne_analysis.gpkg\"))\n",
+    "\n",
+    "print(f\"Loading data from: {gpkg_path}\")\n",
+    "\n",
+    "try:\n",
+    "    # Read from your GeoPackage database\n",
+    "    gdf = gpd.read_file(\n",
+    "        gpkg_path,\n",
+    "        layer=\"veedel_with_stats\"\n",
+    "    )\n",
+    "\n",
+    "    print(\"✅ Data loaded from GeoPackage database!\")\n",
+    "    print(f\"Total Veedel: {len(gdf)}\")\n",
+    "\n",
+    "    # Display first few rows\n",
+    "    display(gdf.head())\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error loading data: {e}\")\n",
+    "    print(\"Make sure you have completed Phase 3 and saved the layer as 'veedel_with_stats'.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "shzPHnMvy1Vi",
+   "metadata": {
+    "id": "shzPHnMvy1Vi"
+   },
+   "source": [
+    "### Step 5.2: Basic Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "rFdXKI8cy1Vj",
+   "metadata": {
+    "id": "rFdXKI8cy1Vj"
+   },
+   "outputs": [],
+   "source": [
+    "if 'gdf' in locals():\n",
+    "    print(\"\\n📊 NDVI Statistics:\")\n",
+    "    # Check if 'ndvi_mean' exists, if not try to find a similar column\n",
+    "    if 'ndvi_mean' not in gdf.columns:\n",
+    "        print(\"Column 'ndvi_mean' not found. Available columns:\", gdf.columns)\n",
+    "    else:\n",
+    "        print(gdf['ndvi_mean'].describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "KdtRyPsly1Vk",
+   "metadata": {
+    "id": "KdtRyPsly1Vk"
+   },
+   "source": [
+    "### Step 5.3: Identify Greenest and Neglected Areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2_H5xSPy1Vk",
+   "metadata": {
+    "id": "d2_H5xSPy1Vk"
+   },
+   "outputs": [],
+   "source": [
+    "if 'gdf' in locals() and 'ndvi_mean' in gdf.columns:\n",
+    "    # Find greenest\n",
+    "    # Adjust 'NAME' to your actual name column if different (e.g., 'STADTVIERTEL')\n",
+    "    name_col = 'NAME' if 'NAME' in gdf.columns else gdf.columns[1] # Fallback to 2nd column\n",
+    "\n",
+    "    top10 = gdf.nlargest(10, 'ndvi_mean')[[name_col, 'ndvi_mean']]\n",
+    "    print(\"\\n🌳 Top 10 Greenest Veedel:\")\n",
+    "    print(top10.to_string(index=False))\n",
+    "\n",
+    "    # Find neglected (NDVI < 0.25)\n",
+    "    neglected = gdf[gdf['ndvi_mean'] < 0.25][[name_col, 'ndvi_mean']]\n",
+    "    print(f\"\\n⚠️  Potentially Neglected Veedel (NDVI < 0.25): {len(neglected)}\")\n",
+    "    print(neglected.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bsiw5oPoy1Vl",
+   "metadata": {
+    "id": "bsiw5oPoy1Vl"
+   },
+   "source": [
+    "### Step 5.4: Categorize and Save Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "BysQkKYjy1Vl",
+   "metadata": {
+    "id": "BysQkKYjy1Vl"
+   },
+   "outputs": [],
+   "source": [
+    "if 'gdf' in locals() and 'ndvi_mean' in gdf.columns:\n",
+    "    # Calculate green space category\n",
+    "    def categorize_green(ndvi):\n",
+    "        if pd.isna(ndvi):\n",
+    "            return 'Unknown'\n",
+    "        if ndvi < 0.2:\n",
+    "            return 'Critical'\n",
+    "        elif ndvi < 0.3:\n",
+    "            return 'Low'\n",
+    "        elif ndvi < 0.4:\n",
+    "            return 'Moderate'\n",
+    "        else:\n",
+    "            return 'Good'\n",
+    "\n",
+    "    gdf['green_category'] = gdf['ndvi_mean'].apply(categorize_green)\n",
+    "    gdf['green_rank'] = gdf['ndvi_mean'].rank(ascending=False, method='min')\n",
+    "\n",
+    "    # Save back to GeoPackage as a NEW layer\n",
+    "    try:\n",
+    "        gdf.to_file(\n",
+    "            gpkg_path,\n",
+    "            layer=\"veedel_analysis_final\",\n",
+    "            driver=\"GPKG\"\n",
+    "        )\n",
+    "        print(\"\\n✅ Analysis saved to database as 'veedel_analysis_final' layer!\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"\\n❌ Error saving to GeoPackage: {e}\")\n",
+    "\n",
+    "    # Also export rankings as CSV\n",
+    "    output_csv = os.path.abspath(os.path.join(\"..\", \"data\", \"outputs\", \"veedel_greenness_ranking.csv\"))\n",
+    "\n",
+    "    # Ensure output directory exists\n",
+    "    os.makedirs(os.path.dirname(output_csv), exist_ok=True)\n",
+    "\n",
+    "    rankings = gdf[[name_col, 'ndvi_mean', 'green_category', 'green_rank']].copy()\n",
+    "    rankings = rankings.sort_values('green_rank')\n",
+    "    rankings.to_csv(\n",
+    "        output_csv,\n",
+    "        index=False\n",
+    "    )\n",
+    "\n",
+    "    print(f\"✅ CSV exported to: {output_csv}\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "qgis_env_ltr",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
